# polevaya_hw1-django

./: .gitignore  pyproject.toml
src/: catalogue.html  categories.html  contacts.html  example.html  get_full_path.py  main_page.html  web_app.py
